feat: Enhance ImageSlider with autoplay, keyboard navigation, and improved touch handling
feat: Update Map component to include dynamic marker positioning and improved loading state

fix: Refactor authentication logic to ensure user password existence check

refactor: Improve MongoDB connection handling with better error messages and global client management

chore: Update TypeScript configuration for better path mapping

feat: Add TypeScript interfaces for User, Volunteer, and LeftoverFood schemas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".", // Explicitly set baseUrl to the project root
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"] // Maps @/ to src/, consistent with your structure
+      "@/*": ["./src/*"]
     },
     "plugins": [
       {
