--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bcrypt": "^5.1.1",
     "leaflet": "^1.9.4",
     "mongodb": "^6.15.0",
-    "next": "15.3.0",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
